Added social icons, public folders and changed the font to Ubuntu

--- a/views/header.ejs
+++ b/views/header.ejs
@@ -1,5 +1,27 @@
 <div class="card text-center mb-4">
   <div class="card-header">
     <h1><%=title%></h1>
+    <div class="container mt-4 mb-2">
+      <a
+        href="https://github.com/VigneshwaranDev"
+        target="_blank"
+        class="fa fa-github"
+      ></a>
+      <a
+        href="https://www.facebook.com/vigneshwaran.vicky.rv"
+        target="_blank"
+        class="fa fa-facebook"
+      ></a>
+      <a
+        href="https://www.instagram.com/__.vigneshwaran.__/"
+        target="_blank"
+        class="fa fa-instagram"
+      ></a>
+      <a
+        href="https://twitter.com/vigneshwaran008"
+        target="_blank"
+        class="fa fa-twitter"
+      ></a>
+    </div>
   </div>
 </div>
